# ai_video_summary

./: .env.example  .gitignore  AGENTS.md  README.md  config.yaml  context.yaml  pyproject.toml
doc/: development_log.md
src/ai_video_summary/: __init__.py  agents.py  config.py  main.py  processor.py
tests/: generate_mock_video.py
